[package]
name = "rust-learning"
version = "0.1.0"
edition = "2021"
description = "playground for rust learning"
license = "MIT"

[dependencies]
rand = "0.8.5"
guess = { path = "./crates/guess" }
aggregator = { path = "./crates/aggregator" }

[workspace]
members = ["crates/*"]

[profile.dev]
opt-level = 1
