[package]
name = "rust_learning"
version = "0.1.0"
edition = "2021"
description = "playground for rust learning"
license = "MIT"

[dependencies]
rand = "0.8.5"
guess = { path = "./crates/guess" }
aggregator = { path = "./crates/aggregator" }
gui = { path = "./crates/gui" }
blog = { path = "./crates/blog" }
hello_macro = { path = "./crates/hello_macro" }
hello_macro_derive = { path = "./crates/hello_macro_derive" }

[workspace]
members = ["crates/*"]

[profile.dev]
opt-level = 1
